<resources>
    <string name="app_name">HuntForCoffee</string>
    <string name="action_settings">Settings</string>
    <string name="b0_string">Next</string>
    <string name="b1_string">""</string>
    <string name="b2_string">""</string>
    <string name="b3_string">""</string>
    <string name="b4_string">""</string>
    <string name="b5_string">""</string>
    <string name="b6_string">""</string>
    <string name="b7_string">""</string>
    <string name="b8_string">""</string>
    <string name="b9_string">""</string>
    <string name="statPhy_string">Physique **</string>
    <string name="statInt_string">Intellect **</string>
    <string name="statAgi_string">Agility **</string>
    <string name="statQui">Quickness **</string>
    <string name="statCha">Charisma **</string>
    <string name="statLuck_string">Luck **</string>
    <string name="statLi_string">Li **</string>
    <string name="statHealth_string">Health: 100</string>
    <string name="statMana_string">Mana: 100</string>
    <string name="statFatigue_string">Fatigue: 0</string>
    <string name="statLu_string">Lu **</string>
    <string name="statLvl_string">Level *</string>
    <string name="statClass_string">Class *</string>
    <string name="mainText_string">HUNT FOR COFFEE</string>
    <string name="subText_string"></string>
    <string name="inventory_back_button">Back</string>
    <string name="inventory_all_button">All</string>
    <string name="inventory_weapon_button">Weapons</string>
    <string name="inventory_armour_button">Armours</string>
    <string name="inventory_consumable_button">Consumables</string>
    <string name="inventory_reagent_button">Reagents</string>
</resources>
