<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="28sp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/scrollView2"
        android:background="@drawable/textborder"
        android:fillViewport="false">

        <TextView
            android:id="@+id/mainTextWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:text="@string/mainText_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </ScrollView>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_marginLeft="6sp"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="Name..."
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:typeface="serif"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/textborder"
        android:fillViewport="false"
        android:minWidth="115sp">

        <TextView
            android:id="@+id/subTextWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:maxWidth="115sp"
            android:paddingBottom="3dp"
            android:paddingLeft="2dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/subText_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textSize="10sp"
            android:textStyle="bold" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b0"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_above="@+id/b5"
            android:layout_alignLeft="@+id/b5"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b0_string"
            android:textSize="12sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/b1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignBottom="@+id/b2"
            android:layout_toLeftOf="@+id/b2"
            android:layout_toStartOf="@id/b2"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b1_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignBottom="@+id/b3"
            android:layout_toLeftOf="@+id/b3"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b2_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignBottom="@+id/b4"
            android:layout_toLeftOf="@+id/b4"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b3_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_above="@+id/b9"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b4_string"
            android:textSize="12sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="40sp"
        android:layout_toRightOf="@+id/timeDate"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/timeDate"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b5_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b6"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/b7"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b6_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b7"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_toLeftOf="@+id/b8"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b7_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b8"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/b9"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b8_string"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b9"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_weight="0.2"
            android:maxWidth="15sp"
            android:text="@string/b9_string"
            android:textSize="12sp"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/statHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statMana"
        android:layout_marginTop="14dp"
        android:text="@string/statHealth_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/statMana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statHealth"
        android:text="@string/statMana_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/statFatigue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statMana"
        android:text="@string/statFatigue_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/statLu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statFatigue"
        android:text="@string/statLu_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/timeClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeDate"
        android:layout_alignParentLeft="true"
        android:text="23:15"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/timeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5sp"
        android:text="12/12/12"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

</RelativeLayout>
